added button highlights

--- a/app/src/main/res/layout-land/portrait_layout.xml
+++ b/app/src/main/res/layout-land/portrait_layout.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/but_rad"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="RAD"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -42,31 +42,17 @@
                 android:id="@+id/but_deg"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="DEG"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
 
-            <!--<Switch-->
-            <!--android:id="@+id/but_raddeg_land"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:paddingLeft="50dp"-->
-            <!--android:background="#424242"-->
-            <!--android:textColor="#ffff"-->
-            <!--android:textStyle="italic"-->
-            <!--android:layout_weight="2"-->
-            <!--android:switchPadding="5sp"-->
-            <!--android:switchMinWidth="5sp"-->
-            <!--android:showText="true"/>-->
-            <!--style="@android:style/Widget.Holo.Light.CompoundButton.Switch"-->
-
             <Button
                 android:id="@+id/but_factorial"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="x!"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -75,7 +61,7 @@
                 android:id="@+id/but_openparens"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="("
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -84,7 +70,7 @@
                 android:id="@+id/but_closeparens"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text=")"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -93,7 +79,7 @@
                 android:id="@+id/but_percent"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="%"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -102,7 +88,7 @@
                 android:id="@id/but_del"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="AC"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -120,7 +106,7 @@
                 android:id="@+id/but_inv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="Inv"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -129,7 +115,7 @@
                 android:id="@+id/but_sine"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="sin"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -138,7 +124,7 @@
                 android:id="@+id/but_ln"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="ln"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -147,7 +133,7 @@
                 android:id="@id/but_7"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="7"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -156,7 +142,7 @@
                 android:id="@id/but_8"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="8"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -165,7 +151,7 @@
                 android:id="@id/but_9"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="9"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -174,7 +160,7 @@
                 android:id="@id/but_div"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="/"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -192,7 +178,7 @@
                 android:id="@+id/but_pi"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="π"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -201,7 +187,7 @@
                 android:id="@+id/but_cos"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="cos"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -210,7 +196,7 @@
                 android:id="@+id/but_log"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="log"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -219,7 +205,7 @@
                 android:id="@id/but_4"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="4"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -228,7 +214,7 @@
                 android:id="@id/but_5"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="5"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -237,7 +223,7 @@
                 android:id="@id/but_6"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="6"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -246,7 +232,7 @@
                 android:id="@id/but_multi"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="×"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -264,7 +250,7 @@
                 android:id="@+id/but_e"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="e"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -273,7 +259,7 @@
                 android:id="@+id/but_tan"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="tan"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -282,7 +268,7 @@
                 android:id="@+id/but_sqrt"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="√"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -291,7 +277,7 @@
                 android:id="@id/but_1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="1"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -300,7 +286,7 @@
                 android:id="@id/but_2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="2"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -309,7 +295,7 @@
                 android:id="@id/but_3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="3"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -318,7 +304,7 @@
                 android:id="@id/but_subt"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="-"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -336,7 +322,7 @@
                 android:id="@+id/but_ans"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="Ans"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -345,7 +331,7 @@
                 android:id="@+id/but_exp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="EXP"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -354,7 +340,7 @@
                 android:id="@+id/but_pow"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="x^y"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -363,7 +349,7 @@
                 android:id="@id/but_0"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="0"
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -372,7 +358,7 @@
                 android:id="@id/but_dot"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="."
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -381,7 +367,7 @@
                 android:id="@id/but_equal"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#a6a6a6"
+                android:background="@drawable/button_highlight_light"
                 android:text="="
                 android:textColor="#ffff"
                 android:textStyle="italic"
@@ -390,7 +376,7 @@
                 android:id="@id/but_add"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#424242"
+                android:background="@drawable/button_highlight_dark"
                 android:text="+"
                 android:textColor="#ffff"
                 android:textStyle="italic"
