--- a/app/src/main/res/layout/portrait_layout.xml
+++ b/app/src/main/res/layout/portrait_layout.xml
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="7"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -53,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="4"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -64,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="1"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -75,7 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="."
                     android:textColor="#ffff"
                     android:textSize="40sp"
@@ -95,7 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="8"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -106,7 +106,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="5"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -117,7 +117,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="2"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -128,7 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="0"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -149,7 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="9"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -160,7 +160,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="6"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -171,7 +171,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="3"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -182,7 +182,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#424242"
+                    android:background="@drawable/button_highlight_dark"
                     android:text="="
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -202,7 +202,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#616161"
+                    android:background="@drawable/button_highlight_light"
                     android:text="AC"
                     android:textColor="#ffff"
                     android:textSize="15sp"
@@ -213,7 +213,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#616161"
+                    android:background="@drawable/button_highlight_light"
                     android:text="/"
                     android:textColor="#ffff"
                     android:textSize="15sp"
@@ -224,7 +224,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#616161"
+                    android:background="@drawable/button_highlight_light"
                     android:text="x"
                     android:textColor="#ffff"
                     android:textSize="15sp"
@@ -235,7 +235,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#616161"
+                    android:background="@drawable/button_highlight_light"
                     android:text="-"
                     android:textColor="#ffff"
                     android:textSize="25sp"
@@ -246,7 +246,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="#616161"
+                    android:background="@drawable/button_highlight_light"
                     android:text="+"
                     android:textColor="#ffff"
                     android:textSize="15sp"
