--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#409cff</color>
     <color name="Transparent">#00FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_gray">#616161</color>
+    <color name="gray">#424242</color>
     <color name="black">#000000</color>
 </resources>
