--- a/app/src/main/res/layout-land/portrait_layout.xml
+++ b/app/src/main/res/layout-land/portrait_layout.xml
@@ -89,7 +89,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_dark"
-                android:text="AC"
+                android:text="@string/clear"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -134,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="7"
+                android:text="@string/seven_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -143,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="8"
+                android:text="@string/eight_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -152,7 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="9"
+                android:text="@string/nine_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -161,7 +161,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_dark"
-                android:text="/"
+                android:text="@string/division"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -206,7 +206,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="4"
+                android:text="@string/four_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -215,7 +215,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="5"
+                android:text="@string/five_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -224,7 +224,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="6"
+                android:text="@string/six_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -233,7 +233,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_dark"
-                android:text="×"
+                android:text="@string/multiplication"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -278,7 +278,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="1"
+                android:text="@string/one_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -287,7 +287,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="2"
+                android:text="@string/two_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -296,7 +296,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="3"
+                android:text="@string/three_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -305,7 +305,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_dark"
-                android:text="-"
+                android:text="@string/subtraction"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -350,7 +350,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="0"
+                android:text="@string/zero_button"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -359,7 +359,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="."
+                android:text="@string/dot"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -368,7 +368,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_light"
-                android:text="="
+                android:text="@string/equals"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
@@ -377,7 +377,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/button_highlight_dark"
-                android:text="+"
+                android:text="@string/addition"
                 android:textColor="#ffff"
                 android:textStyle="italic"
                 android:layout_weight="1"/>
