--- a/app/src/main/res/layout/portrait_layout.xml
+++ b/app/src/main/res/layout/portrait_layout.xml
@@ -43,7 +43,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="7"
+                    android:text="@string/seven_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -54,7 +54,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="4"
+                    android:text="@string/four_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -65,7 +65,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="1"
+                    android:text="@string/one_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -76,7 +76,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="."
+                    android:text="@string/dot"
                     android:textColor="#ffff"
                     android:textSize="40sp"
                     android:textStyle="italic" />
@@ -96,7 +96,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="8"
+                    android:text="@string/eight_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -107,7 +107,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="5"
+                    android:text="@string/five_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -118,7 +118,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="2"
+                    android:text="@string/two_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -129,7 +129,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="0"
+                    android:text="@string/zero_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -150,7 +150,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="9"
+                    android:text="@string/nine_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -161,7 +161,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="6"
+                    android:text="@string/six_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -172,7 +172,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="3"
+                    android:text="@string/three_button"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -183,7 +183,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_dark"
-                    android:text="="
+                    android:text="@string/equals"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -203,7 +203,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_light"
-                    android:text="AC"
+                    android:text="@string/clear"
                     android:textColor="#ffff"
                     android:textSize="15sp"
                     android:textStyle="italic" />
@@ -214,7 +214,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_light"
-                    android:text="/"
+                    android:text="@string/division"
                     android:textColor="#ffff"
                     android:textSize="15sp"
                     android:textStyle="italic" />
@@ -225,7 +225,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_light"
-                    android:text="x"
+                    android:text="@string/multiplication"
                     android:textColor="#ffff"
                     android:textSize="15sp"
                     android:textStyle="italic" />
@@ -236,7 +236,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_light"
-                    android:text="-"
+                    android:text="@string/subtraction"
                     android:textColor="#ffff"
                     android:textSize="25sp"
                     android:textStyle="italic" />
@@ -247,7 +247,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/button_highlight_light"
-                    android:text="+"
+                    android:text="@string/addition"
                     android:textColor="#ffff"
                     android:textSize="15sp"
                     android:textStyle="italic" />
